--- a/pages/translated-posts/new-es.html
+++ b/pages/translated-posts/new-es.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong>Mapas de reaperturas de las escuelas en California ya disponibles</strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>La nueva guía para deportes para jóvenes y adultos esboza un regreso a la competencia</strong></strong></h2>
 
 
 
-<p>El centro de Escuelas Seguras para Todos ahora tiene mapas de reapertura, que brindan una panorámica a nivel estatal de las reaperturas de escuelas en California. Enumeran el modo de instrucción actual de cada distrito escolar (aprendizaje en persona, híbrido o a distancia) y enlaces a su plan de seguridad relacionado con la COVID.</p>
+<p>El Departamento de Salud Pública de California publicó una nueva guía para deportes recreativos para jóvenes y adultos que entrará en vigor el 26 de febrero. Muestra qué deportes se podrán volver a jugar y en qué niveles, según el nivel de contacto y el riesgo de transmisión del coronavirus.</p>
 
 
 
-<p><a href="https://schools.covid19.ca.gov" class="action-link pt-3 pb-3 px-4">Consulte los mapas.</a></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Lea la guía.</a></p>
