--- a/pages/translated-posts/new-vi.html
+++ b/pages/translated-posts/new-vi.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong>Hiện đã có bản đồ mở cửa trở lại các trường học tại California</strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>Hướng dẫn về các môn thể thao dành cho người lớn và thanh thiếu niên mới vạch ra lộ trình trở lại thi đấu</strong></strong></h2>
 
 
 
-<p>Trung Tâm Trường Học An Toàn Cho Mọi Người hiện đã có Bản Đồ Mở Cửa Trở Lại, cho biết hiện trạng mở cửa trở lại các trường học trên toàn tiểu bang California. Bản đồ liệt kê phương thức giảng dạy hiện tại của từng học khu (học trên lớp, kết hợp hoặc học từ xa) và liên kết với kế hoạch an toàn trong đại dịch COVID của học khu đó.</p>
+<p>Sở Y Tế Công Cộng California đã ban hành hướng dẫn mới về các môn thể thao giải trí dành cho người lớn và thanh thiếu niên sẽ có hiệu lực từ ngày 26 tháng 2. Hướng dẫn này sẽ cho biết các môn thể thao nào sẽ được phép chơi trở lại ở cấp độ nào, dựa trên mức độ tiếp xúc và nguy cơ lây truyền vi-rút corona.</p>
 
 
 
-<p><a href="https://schools.covid19.ca.gov" class="action-link pt-3 pb-3 px-4">Xem bản đồ</a></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Đọc hướng dẫn</a></p>
