--- a/pages/translated-posts/new-ar.html
+++ b/pages/translated-posts/new-ar.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong>خرائط إعادة فتح المدارس في كاليفورنيا متاحة الآن</strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>تحدد الإرشادات الرياضية الجديدة للشباب والكبار العودة إلى المنافسة</strong></strong></h2>
 
 
 
-<p>لدى مركز مدارس آمنة للجميع (Safe Schools for All Hub) الآن خرائط إعادة الفتح، والتي تقدم صُورَةٌ خاطِفَة على مستوى الولاية لعمليات إعادة فتح المدارس في جميع أنحاء كاليفورنيا. وهم يسردون أسلوب التعليم الحالي لكل منطقة تعليمية (سواء بالحضور الشخصي أو المختلط أو التعلم عن بعد) ويربطونه بخطة أمان كوفيد الخاصة بهم.</p>
+<p>وأصدرت إدارة الصحة العامة في كاليفورنيا إرشادات جديدة للرياضات الترفيهية للشباب والكبار والتي ستدخل حيز التنفيذ في 26 فبراير. وهي تُبين أي الرياضات سيُسمح لها بالعودة للعب وفي أي فئة، استنادا إلى مستوى الاتصال وخطر انتقال فيروس كورونا.</p>
 
 
 
-<p><a href="https://schools.covid19.ca.gov" class="action-link pt-3 pb-3 px-4">استعرض الخرائط</a></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">اقرأ الإرشادات</a></p>
