--- a/pages/translated-posts/new-ko.html
+++ b/pages/translated-posts/new-ko.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong>현재 캘리포니아 내 수업 재개 상황에 대한 지도 제공</strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>새로운 청소년 및 성인 스포츠 지침은 시합 재개에 대한 개요를 나타냅니다</strong></strong></h2>
 
 
 
-<p>모두에게 안전한 학교 허브에 현재 수업 재개 관련 지도가 있으며, 이를 통해 캘리포니아 전역에서의 수업 재개에 관한 주 전체 상황을 확인할 수 있습니다. 이 지도에는 교육구 별 현재 수업 방식(대면, 혼합식 또는 원격 수업)과 COVID 안전 계획으로의 링크가 포함되어 있습니다.</p>
+<p>캘리포니아 공중 보건부(California Department of Public Health)는 2월 26일 자로 시행되는 청소년 및 성인 레크리에이션 스포츠에 대한 새로운 지침을 발표하였습니다. 이를 통해 코로나바이러스 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠를 할 수 있는지를 확인할 수 있습니다.</p>
 
 
 
-<p><a href="https://schools.covid19.ca.gov" class="action-link pt-3 pb-3 px-4">지도 확인</a></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">해당 지침 확인</a></p>
