--- a/pages/translated-posts/new-tl.html
+++ b/pages/translated-posts/new-tl.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong>Makikita na ngayon ang mga mapa para sa muling pagbubukas ng mga paaralan sa California</strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>Pagbalik sa kumpetisyon, nakabalangkas sa bagong gabay sa youth at adult sports</strong></strong></h2>
 
 
 
-<p>Ang Hub ng Safe Schools for All ay mayroon na ngayong mga Mapa para sa Muling Pagbubukas, na nagbibigay ng snapshot ng mga muling pagbubukas ng paaralan sa buong California. Nakalista dito ang kasalukuyang paraan ng pagtuturo ng bawat distrito ng paaralan (personal, hybrid o distance learning) at link sa planong pangkaligtasan nito para sa COVID.</p>
+<p>Naglabas ang Departamento ng Pampublikong Kalusugan ng California (California Department of Public Health) ng bagong gabay para sa panlibangang sport para sa kabataan at nasa hustong gulang na magkakaroon ng bisa sa Pebrero 26. Ipinapakita nito kung aling mga sport ang papayagan nang malaro sa kung aling mga tier, batay sa antas ng contact at panganib ng transmisyon ng coronavirus.</p>
 
 
 
-<p><a href="https://schools.covid19.ca.gov" class="action-link pt-3 pb-3 px-4">Tingnan ang mga mapa</a></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Basahin ang gabay</a></p>
