--- a/pages/translated-posts/new-zh-hans.html
+++ b/pages/translated-posts/new-zh-hans.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong>现可阅览加州学校重新开放地图</strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>新的青少年及成人体育运动指引概述了可以恢复进行的运动项目</strong></strong></h2>
 
 
 
-<p>全民安全校园中心现提供重新开放地图，其简要说明了全加州学校重新开放的概况。该中心列出了各个学区现行的教学模式（面授、混合式或远程教学），以及各学区的COVID安全计划的链接。</p>
+<p>加州公共卫生局针对青少年及成人休闲运动发布了新的指引，此指引将于2月26日生效。该指引基于接触程度和传播新型冠状病毒的风险等级，说明了各个等级中允许恢复进行的运动项目。</p>
 
 
 
-<p><a href="https://schools.covid19.ca.gov" class="action-link pt-3 pb-3 px-4">阅览地图</a></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">阅读该指引</a></p>
