--- a/pages/translated-posts/new-zh-hant.html
+++ b/pages/translated-posts/new-zh-hant.html
@@ -1,9 +1,9 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong>現可閱覽加州學校重新開放地圖</strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>新的青少年及成人體育運動指引概述了可以恢復進行的運動項目</strong></strong></h2>
 
 
 
-<p>全民安全校園中心現提供重新開放地圖，其簡要說明了全加州學校重新開放的概況。該中心列出了各個學區現行的教學模式（面授、混合式或遠距教學），以及各學區的COVID安全計劃的連結。</p>
+<p>加州公共衛生局針對青少年及成人休閒運動發佈了新的指引，此指引將於2月26日生效。該指引基於接觸程度和傳播新型冠狀病毒的風險等級，說明了各個等級中允許恢復進行的運動項目。</p>
 
 
 
-<p><a href="https://schools.covid19.ca.gov" class="action-link pt-3 pb-3 px-4">閱覽地圖</a></p>
+<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">閱讀該指引</a></p>
