Update translation - 102946121 (#3373) 47369e6917c2151004c254d959fbf6bc0c73066c

--- a/es/treatment-for-covid-19/index.html
+++ b/es/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tratamiento</h1>
           
-            <p class="small-text">Última actualización&nbsp;11 de enero de 2021 a las 10:30 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;18 de febrero de 2021 a las 5:05 p. m.</p>
           
         </div>
       </div>
@@ -197,7 +197,7 @@
 
 
 
-<p>Para las personas con alto riesgo de enfermarse gravemente, la FDA emitió EUA para dos anticuerpos monoclonales. Estos son <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a> y <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab más imdevimab</a>. Estos se adhieren a partes del virus, lo que ayuda al sistema inmunológico a reconocerlo y responder contra él. Si se usan, deben administrarse lo antes posible dentro de los 10 días posteriores al inicio de los síntomas.</p>
+<p>Para las personas con alto riesgo de enfermarse gravemente, la FDA emitió EUA para algunos tratamientos con anticuerpos monoclonales. Estos son <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a>, <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">bamlanivimab y etesevimab administrados juntos</a>, y <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab más imdevimab</a>. Estos se adhieren a partes del virus, lo que ayuda al sistema inmunológico a reconocerlo y responder contra él. Si se usan, deben administrarse lo antes posible dentro de los 10 días posteriores al inicio de los síntomas.</p>
 
 
 
@@ -344,8 +344,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Sí. La FDA ha emitido dos EUA para medicamentos de anticuerpos monoclonales:</p>
-<ul><li>Bamlanivimab</li><li>Casirivimab e imdevimab, administrados juntos</li></ul>
+            <p>Sí. La FDA ha emitido algunos EUA para medicamentos de anticuerpos monoclonales:</p>
+<ul><li>bamlanivimab</li><li>bamlanivimab y etesevimab, administrados juntos</li><li>casirivimab e imdevimab, administrados juntos</li></ul>
 <p>Están autorizados para:</p>
 <ul><li>Pacientes no hospitalizados con COVID-19 leve o moderada.</li><li>Pacientes adultos y pediátricos de 12 años de edad o más que pesen al menos 88 libras. </li><li>Pacientes con alto riesgo de evolucionar a COVID-19 grave u hospitalización. Esto incluye a aquellos que tienen 65 años de edad o más, o que tienen ciertas afecciones médicas crónicas.</li></ul>
 <p>Los proveedores de atención médica administran los medicamentos en una sola dosis por vía intravenosa.</p>
@@ -353,8 +353,8 @@
 <ul><li>hospitalización</li><li>terapia de oxígeno</li><li>un aumento en el flujo de oxígeno de referencia debido a afecciones subyacentes no relacionadas con la COVID-19</li></ul>
 <p>Los pacientes tratados con estos medicamentos deben continuar haciendo lo siguiente:</p>
 <ul><li>autoaislarse</li><li>usar mascarilla </li><li>practicar el distanciamiento social </li><li>evitar compartir artículos personales </li><li>limpiar y desinfectar las superficies que se tocan con gran frecuencia </li><li>lavarse las manos con frecuencia</li></ul>
-<p>Para obtener más información, consulte</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Anticuerpo monoclonal bamlanivimab para el tratamiento de la COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Anticuerpos monoclonales casirivimab e imdevimab para el tratamiento de la COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Preguntas frecuentes sobre la autorización de uso de emergencia de bamlanivimab</a> </li><li>FDA: <a href="https://www.fda.gov/media/143894/download">Preguntas frecuentes sobre la autorización de uso de emergencia de casirivimab + imdevimab</a> </li></ul>
+<p>Obtenga más información sobre estos tratamientos de la FDA:</p>
+<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">anticuerpo monoclonal bamlanivimab para el tratamiento de la COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">anticuerpo monoclonal bamlanivimab y etesevimab para el tratamiento de la COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">anticuerpos monoclonales casirivimab e imdevimab para el tratamiento de la COVID-19</a></li><li><a href="https://www.fda.gov/media/143605/download">preguntas frecuentes sobre la autorización de uso de emergencia de bamlanivimab</a> </li><li><a href="https://www.fda.gov/media/145808/download">preguntas frecuentes sobre la autorización de uso de emergencia de bamlanivimab y etesevimab</a></li><li><a href="https://www.fda.gov/media/143894/download">preguntas frecuentes sobre la autorización de uso de emergencia de casirivimab + imdevimab</a></li></ul>
 
                   </div>
                 </div>
