--- a/ko/treatment-for-covid-19/index.html
+++ b/ko/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>치료</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 1월 11일 오후 10:30</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 18일 오후 5:05</p>
           
         </div>
       </div>
@@ -197,7 +197,7 @@
 
 
 
-<p>중증 발병 위험이 높은 경우에 대해 FDA는 두 가지의 단일 항원성 항체에 대한 EUA를 허가하였습니다. <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">밤라미비맙(Bamlanivimab)</a> 및 <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">카시리비맙(Casirivimab)과 임데비맙(Imdevimab)</a>이 이에 해당합니다. 이 항체들은 바이러스 부위에 붙어 면역 체계가 이를 인식하고 대응할 수 있게 합니다. 해당 항체를 사용할 경우 최대한 조속히 또는 증상이 시작된 지 10일 이내에 투여해야 합니다.</p>
+<p>중증 발병 고위험자에 대해 FDA는 몇 가지의 단일 항원성 항체 치료에 대한 EUA를 허가하였습니다. <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">밤라미비맙(bamlanivimab)</a> 및 <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">밤라미비맙과 에테세비밥(etesevimab) 동시 투여</a>, <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">카시리비맙(casirivimab)과 임데비밥(imdevimab) 병행</a> 등이 이에 해당합니다. 이 항체들은 바이러스 부위에 붙어 면역 체계가 이를 인식하고 대응할 수 있게 합니다. 해당 항체를 사용할 경우 최대한 조속히 또는 증상이 시작된 지 10일 이내에 투여해야 합니다.</p>
 
 
 
@@ -344,8 +344,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>그렇습니다. FDA는 단일 클론성 항체 의약품에 대해 두 건의 EUA를 빌표하였습니다:</p>
-<ul><li>밤라미비맙(Bamlanivimab)</li><li>카시리비맙(Casirivimab)과 임데비맙(imdevimab), 동시 투여</li></ul>
+            <p>있습니다. FDA는 단일 클론성 항체 의약품에 대해 몇 건의 EUA를 빌표하였습니다:</p>
+<ul><li>밤라미비맙(Bamlanivimab)</li><li>밤라미비맙과 에테세비밥(etesevimab), 동시 투여</li><li>카시리비맙(Casirivimab)과 임데비맙(imdevimab), 동시 투여</li></ul>
 <p>승인된 사용 목적은 다음과 같습니다:</p>
 <ul><li>가볍거나 중간 정도의 COVID-19 증상을 보이는 비입원 환자.</li><li>성인 및 최소 88 파운드 체중의 만 12세 이상 소아 환자. </li><li>중증의 COVID-19 또는 입원 상태로 진행될 위험이 높은 환자. 여기에는 65세 이상의 연령자 또는 특정 만성 질환자가 해당됩니다.</li></ul>
 <p>해당 약물은 의료 제공자가 정맥 주사로 일회 분량을 투여합니다.</p>
@@ -353,8 +353,8 @@
 <ul><li>입원</li><li>산소 치료</li><li>비 COVID-19 관련 기저 질환으로 인한 기준 산소 주입량 확대</li></ul>
 <p>해당 약물 치료 대상 환자들은 다음 사항을 계속 이행해야 합니다:</p>
 <ul><li>자가 격리</li><li>마스크 착용 </li><li>사회적 거리두기 </li><li>개인 물품 공유 자제 </li><li>"자주 만지는" 표면 세정 및 소독 </li><li>손 자주 씻기</li></ul>
-<p>더 자세한 사항은 다음을 참조하십시오</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">COVID-19 치료를 위한 단일 항체 밤라미비맙(Monoclonal Antibody Bamlanivimab for Treatment of COVID-19)</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">COVID-19 치료를 위한 단일 항체 카시리비맙과 임데비맙(Monoclonal Antibodies Casirivimab and  Imdevimab for Treatment of COVID-19)</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">밤라니비맙 긴급 사용 승인에 대해 자주 묻는 질문(Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab)</a> </li><li>FDA: <a href="https://www.fda.gov/media/143894/download">카시리비맙 + 임데비맙 긴급 사용 승인에 대해 자주 묻는 질문(Frequently Asked Questions on the Emergency Use Authorization for Casirivimab + Imdevimab)</a></li></ul>
+<p>본 치료에 관한 더 자세한 사항은 FDA에서 확인하십시오:</p>
+<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">COVID-19 치료를 위한 단일 항체 밤라미비맙</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">COVID-19 치료를 위한 단일 항체 밤라미비맙과 에테세비밥</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">COVID-19 치료를 위한 단일 항체 카시리비맙과 임데비맙</a></li><li><a href="https://www.fda.gov/media/143605/download">밤라니비맙 긴급 사용 승인에 관해 자주 묻는 질문</a> </li><li><a href="https://www.fda.gov/media/145808/download">밤라니비맙 및 에테세비밥 긴급 사용 승인에 관해 자주 묻는 질문</a></li><li><a href="https://www.fda.gov/media/143894/download">카시리비맙 + 임데비맙 긴급 사용 승인에 관해 자주 묻는 질문</a></li></ul>
 
                   </div>
                 </div>
