--- a/vi/treatment-for-covid-19/index.html
+++ b/vi/treatment-for-covid-19/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Điều trị</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;11 tháng 1, 2021 lúc 22:30</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;18 tháng 2, 2021 lúc 17:05</p>
           
         </div>
       </div>
@@ -199,7 +199,7 @@
 
 
 
-<p>Đối với những người có nguy cơ cao bị ốm nặng, FDA đã ban hành EUA cho hai kháng thể đơn dòng. Đó là <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a> và <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab plus imdevimab</a>. Chúng gắn vào các bộ phận của vi-rút, giúp hệ miễn dịch nhận biết và phản ứng với nó. Nếu được sử dụng, cần tiêm kháng thể càng sớm càng tốt hoặc trong vòng 10 ngày kể từ khi bắt đầu có các triệu chứng.</p>
+<p>Đối với những người có nguy cơ cao bị ốm nặng, FDA đã ban hành EUA cho một số chương trình điều trị bằng kháng thể đơn dòng. Đó là <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a>, <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">bamlanivimab và etesevimab được tiêm đồng thời</a> và <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab cùng với imdevimab</a>. Chúng gắn vào các bộ phận của vi-rút, giúp hệ miễn dịch nhận biết và phản ứng với nó. Nếu được sử dụng, cần tiêm kháng thể càng sớm càng tốt hoặc trong vòng 10 ngày kể từ khi bắt đầu có các triệu chứng.</p>
 
 
 
@@ -346,8 +346,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Có. FDA đã ban hành hai EUA cho thuốc kháng thể đơn liều:</p>
-<ul><li>Bamlanivimab</li><li>Casirivimab và imdevimab, được tiêm đồng thời</li></ul>
+            <p>Có. FDA đã ban hành một số EUA cho thuốc kháng thể đơn liều:</p>
+<ul><li>Bamlanivimab</li><li>Bamlanivimab và etesevimab, được tiêm đồng thời</li><li>Casirivimab và imdevimab, được tiêm đồng thời</li></ul>
 <p>Giấy Phép được sử dụng cho:</p>
 <ul><li>Các bệnh nhân không phải nhập viện bị nhiễm COVID-19 ở mức độ nhẹ hoặc trung bình.</li><li>Các bệnh nhân là người lớn hoặc trẻ em từ 12 tuổi trở lên có mức cân nặng ít nhất 88 pound. </li><li>Các bệnh nhân có nguy cơ cao sẽ tiến triển bệnh COVID-19 sang mức độ nặng hoặc nhập viện. Nhóm này bao gồm cả những người từ 65 tuổi trở lên hoặc có một số bệnh trạng mãn tính cụ thể.</li></ul>
 <p>Các nhà cung cấp dịch vụ chăm sóc sức khỏe tiêm các loại thuốc này như thuốc tiêm đơn liều.</p>
@@ -355,8 +355,8 @@
 <ul><li>Nhập viện</li><li>Liệu pháp oxy</li><li>Tăng dòng oxy cơ sở do các bệnh trạng nền không liên quan đến COVID-19</li></ul>
 <p>Các bệnh nhân được điều trị bằng các loại thuốc này cần tiếp tục:</p>
 <ul><li>Tự cách ly</li><li>Đeo khẩu trang </li><li>Thực hiện giãn cách xã hội </li><li>Tránh dùng chung vật dụng cá nhân </li><li>Vệ sinh và khử trùng các bề mặt "thường xuyên tiếp xúc" </li><li>Rửa tay thường xuyên</li></ul>
-<p>Để biết thêm thông tin, hãy xem</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Kháng Thể Đơn Liều Bamlanivimab để Điều Trị Bệnh COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Các Kháng Thể Đơn Liều Casirivimab và Imdevimab để Điều Trị Bệnh COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Bamlanivimab</a> </li><li>FDA: <a href="https://www.fda.gov/media/143894/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Casirivimab + Imdevimab</a></li></ul>
+<p>Hãy tìm hiểu thêm về các phương pháp điều trị này từ FDA:</p>
+<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Kháng Thể Đơn Liều Bamlanivimab để Điều Trị Bệnh COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">Kháng Thể Đơn Liều Bamlanivimab và để Etesevimab Điều Trị Bệnh COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Các Kháng Thể Đơn Liều Casirivimab và Imdevimab để Điều Trị Bệnh COVID-19</a></li><li><a href="https://www.fda.gov/media/143605/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Bamlanivimab</a> </li><li><a href="https://www.fda.gov/media/145808/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Bamlanivimab và Etesevimab</a></li><li><a href="https://www.fda.gov/media/143894/download">Các Câu Hỏi Thường Gặp về Giấy Phép Sử Dụng Khẩn Cấp cho Casirivimab + Imdevimab</a></li></ul>
 
                   </div>
                 </div>
