--- a/zh-hant/treatment-for-covid-19/index.html
+++ b/zh-hant/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>治療</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年1月11日, 下午10:30</p>
+            <p class="small-text">最近更新&nbsp;2021年2月18日, 下午5:05</p>
           
         </div>
       </div>
@@ -197,7 +197,7 @@
 
 
 
-<p>針對重症高危人士，FDA為兩種單克隆抗體發佈了EUA。其分別為<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a>和<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab加imdevimab</a>。這些抗體會附著於病毒某些部分，幫助免疫系統識別並對抗病毒。如果要使用，則應盡快施用，或在自症狀出現之日起10日內施用。</p>
+<p>針對重症高危人士，FDA為一些單克隆抗體療法發佈了EUA。其中包括<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a>，<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">bamlanivimab和etesevimab一起給藥</a>，以及<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab + imdevimab</a>。這些抗體會附著於病毒某些部分，幫助免疫系統識別並對抗病毒。如果要使用，則應盡快施用，或在自症狀出現之日起10日內施用。</p>
 
 
 
@@ -344,8 +344,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>有。FDA為單克隆抗體藥物發佈了兩項EUA：</p>
-<ul><li>Bamlanivimab</li><li>Casirivimab和imdevimab，一起給藥</li></ul>
+            <p>是的。FDA為單克隆抗體藥物發佈了數項EUA：</p>
+<ul><li>Bamlanivimab</li><li>Bamlanivimab和etesevimab，一起給藥</li><li>Casirivimab和imdevimab，一起給藥</li></ul>
 <p>授權將藥物用於以下人士：</p>
 <ul><li>有輕度或中度COVID-19症狀的非住院患者。</li><li>體重至少達88磅的12歲及以上成人及兒童患者。 </li><li>有較高風險發展為COVID-19重症或住院的患者。其中包括65歲或以上人士，或有特定慢性病況的人士。</li></ul>
 <p>藥物的施用方式是由醫療保健提供者進行单剂量靜脈給藥。</p>
@@ -353,8 +353,8 @@
 <ul><li>住院治療</li><li>氧氣治療</li><li>因有潛在的非COVID-19相關狀況而需要增加基礎氧氣流量</li></ul>
 <p>使用這些藥物進行治療的患者應該持續進行以下事項：</p>
 <ul><li>自我隔離</li><li>佩戴口罩 </li><li>保持社交距離 </li><li>避免共用個人物品 </li><li>對「經常接觸」的表面進行清潔和消毒 </li><li>勤洗手</li></ul>
-<p>如需更多資訊，請參閱</p>
-<ul><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用於治療COVID-19的單克隆抗體Bamlanivimab</a></li><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">用於治療COVID-19的單克隆抗體Casirivimab和Imdevimab</a></li><li>FDA：<a href="https://www.fda.gov/media/143605/download">有關Bamlanivimab緊急使用授權的常見問題與解答</a> </li><li>FDA：<a href="https://www.fda.gov/media/143894/download">有關Casirivimab + Imdevimab緊急使用授權的常見問題與解答</a></li></ul>
+<p>從FDA了解關於這些療法的更多資訊：</p>
+<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用於治療COVID-19的單克隆抗體Bamlanivimab</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">用於治療COVID-19的單克隆抗體Bamlanivimab和Etesevimab</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">用於治療COVID-19的單克隆抗體Casirivimab和Imdevimab</a></li><li><a href="https://www.fda.gov/media/143605/download">有關Bamlanivimab緊急使用授權的常見問題與解答</a> </li><li><a href="https://www.fda.gov/media/145808/download">有關Bamlanivimab和Etesevimab緊急使用授權的常見問題與解答</a></li><li><a href="https://www.fda.gov/media/143894/download">有關Casirivimab + Imdevimab緊急使用授權的常見問題與解答</a></li></ul>
 
                   </div>
                 </div>
