--- a/ar/treatment-for-covid-19/index.html
+++ b/ar/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>العلاج</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;10:30 م الساعة 11 يناير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;5:05 م الساعة 18 فبراير 2021</p>
           
         </div>
       </div>
@@ -181,7 +181,7 @@
 
 
 
-<ul><li>وافقت إدارة الغذاء والدواء الأمريكية (FDA) على عقار واحد  لعلاج كوفيد-19 وهو ريمديسيفير (Veklury).</li><li>أصدرت إدارة الغذاء والدواء الأمريكية <a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization">تراخيص استخدام في حالات الطوارئ</a>(EUAs).  حيث تسمح هذه التراخيص لمقدمي الرعاية الصحية باستخدام منتجات لم تتم الموافقة عليها بعد. كما يُسمح لبعض الأدوية المعتمدة لاستخدامات أخرى بمعالجة فيروس كوفيد-19. ولكن لابد من تلبية بعض المتطلبات.</li><li>ولقد وضعت المعاهد الوطنية للصحة (NIH) <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">إرشادات العلاج</a> الخاصة بكوفيد-19. تساعد هذه الإرشادات مقدمي الرعاية الصحية لمرضى كوفيد-19 على فهم كيفية استخدام الأدوية المتوفرة.</li></ul>
+<ul><li>وافقت إدارة الغذاء والدواء الأمريكية (FDA) على عقار واحد  لعلاج كوفيد-19 وهو ريمديسيفير (Veklury).</li><li>أصدرت إدارة الغذاء والدواء الأمريكية <a href="https://www.fda.gov/emergency-preparedness-and-response/mcm-legal-regulatory-and-policy-framework/emergency-use-authorization">تراخيص استخدام في حالات الطوارئ</a>(EUAs). حيث تسمح هذه التراخيص لمقدمي الرعاية الصحية باستخدام منتجات لم تتم الموافقة عليها بعد. كما يُسمح لبعض الأدوية المعتمدة لاستخدامات أخرى بمعالجة فيروس كوفيد-19. ولكن لابد من تلبية بعض المتطلبات.</li><li>ولقد وضعت المعاهد الوطنية للصحة (NIH) <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">إرشادات العلاج</a> الخاصة بكوفيد-19. تساعد هذه الإرشادات مقدمي الرعاية الصحية لمرضى كوفيد-19 على فهم كيفية استخدام الأدوية المتوفرة.</li></ul>
 
 
 
@@ -197,7 +197,7 @@
 
 
 
-<p>بالنسبة للأشخاص المعرضين لخطر الإصابة بمرض شديد، فلقد أصدرت إدارة الغذاء والدواء  تراخيص الاستخدام في حالات الطوارئ لاثنين من الأجسام المضادة أحادية النسيلة. وهما <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a> و <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab مضاف إليه imdevimab</a>. حيث تقوم بالارتباط بأجزاء من الفيروس، مما يساعد جهاز المناعة على التعرف عليه والتصدي له. وفي حال استخدامها، يجب إعطاؤها في أقرب وقت ممكن أو في غضون 10 أيام من بداية الأعراض.</p>
+<p>بالنسبة للأشخاص المعرضين لخطر الإصابة بمرض شديد، فلقد أصدرت إدارة الغذاء والدواء تراخيص الاستخدام في حالات الطوارئ لعدد قليل من علاجات الأجسام المضادة أحادية النسيلة. وهم <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">باملينيفيماب</a>، <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">باملانيفيماب وإيتيسيفيماب يدارن معًا</a>، و <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">كازيريفيماب بالإضافة إلى إيمديفيماب</a> حيث تقوم بالارتباط بأجزاء من الفيروس، مما يساعد جهاز المناعة على التعرف عليه والتصدي له. وفي حال استخدامها، يجب إعطاؤها في أقرب وقت ممكن أو في غضون 10 أيام من بداية الأعراض.</p>
 
 
 
@@ -344,8 +344,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>نعم. أصدرت إدارة الغذاء والدواء (FDA) ترخيص الاستخدام في حالات الطوارئ لعقاقير الأجسام المضادة وحيدة النسيلة:</p>
-<ul><li>Bamlanivimab،</li><li>وCasirivimab، وimdevimab، وهذه الأدوية توصف معًا</li></ul>
+            <p>نعم. أصدرت إدارة الغذاء والدواء (FDA) عددًا قليلاً من تراخيص الاستخدام في حالات الطوارئ لعقاقير الأجسام المضادة وحيدة النسيلة:</p>
+<ul><li>باملينيفيماب (Bamlanivimab)</li><li>وباملانيفيماب وإيتيسيفيماب، وهذه الأدوية توصف معًا/يدارن معًا</li><li>وكازيريفيماب وإمديفيماب، وهذه الأدوية توصف معًا</li></ul>
 <p>وهذه الأدوية مصرح بها لعلاج:</p>
 <ul><li>المرضى غير المقيمين بالمستشفى المصابين بفيروس كوفيد-19 الخفيف أو المعتدل.</li><li>المرضى البالغين والأطفال الذين تبلغ أعمارهم 12 عامًا أو أكبر ويزنون 88 رطلًا على الأقل. </li><li>المرضى المعرضين بدرجة عالية لخطر التطور إلى كوفيد-19 الشديد أو الإقامة بالمستشفى للعلاج. وهذا يشمل أولئك البالغة أعمارهم 65 عامًا أو أكثر، أو الذين يعانون من بعض الحالات الطبية المزمنة.</li></ul>
 <p>ويقوم مقدمو الرعاية الصحية بإعطاء هذه العقاقير كجرعة وحيدة عن طريق الوريد.</p>
@@ -353,8 +353,8 @@
 <ul><li>تم إدخالهم المستشفى للإقامة والعلاج</li><li>تتطلب حالتهم العلاج بالأكسجين</li><li>تتطلب حالتهم زيادة في تدفق الأكسجين الأساسي بسبب ظروف غير معروفة ولا ترتبط بفيروس كوفيد-19</li></ul>
 <p>يجب على المرضى الذين عولجوا بهذه العقاقير الاستمرار في:</p>
 <ul><li>العزلة الذاتية</li><li>ارتداء القناع </li><li>التباعد الاجتماعي </li><li>تجنب مشاركة الأغراض الشخصية </li><li>التنظيف والتطهير للأسطح التي تُلمس كثيرًا وباستمرار</li><li>غسل أيديهم بشكل متكرر</li></ul>
-<p>لمعرفة المزيد من المعلومات، اطلع على</p>
-<ul><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">عقار الأجسام المضادة وحيدة النسيلة Bamlanivimab لعلاج مرضى كوفيد-19</a></li><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">عقارا الأجسام المضادة وحيدة النسيلة Casirivimab وImdevimab لعلاج مرضى كوفيد-19</a></li><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/media/143605/download">الأسئلة المتكررة عن تصريح الاستخدام في حالات الطوارئ لعقار Bamlanivimab</a> </li><li>إدارة الغذاء والدواء: <a href="https://www.fda.gov/media/143894/download">الأسئلة المتكررة عن تصريح الاستخدام في حالات الطوارئ لعقاري Casirivimab وImdevimab</a></li></ul>
+<p>اعرف المزيد عن هذه العلاجات من إدارة الغذاء والدواء:</p>
+<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">عقار الأجسام المضادة وحيدة النسيلة Bamlanivimab لعلاج مرضى كوفيد-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">عقار الأجسام المضادة وحيدة النسيلة Bamlanivimab وEtesevimab لعلاج مرضى كوفيد-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">عقارا الأجسام المضادة وحيدة النسيلة Casirivimab وImdevimab لعلاج مرضى كوفيد-19</a></li><li><a href="https://www.fda.gov/media/143605/download">الأسئلة المتكررة عن تصريح الاستخدام في حالات الطوارئ لعقار Bamlanivimab</a> </li><li><a href="https://www.fda.gov/media/145808/download">الأسئلة المتكررة عن تصريح الاستخدام في حالات الطوارئ لعقار Bamlanivimab وEtesevimab</a></li><li><a href="https://www.fda.gov/media/143894/download">الأسئلة المتكررة عن تصريح الاستخدام في حالات الطوارئ لعقاري Casirivimab وImdevimab</a></li></ul>
 
                   </div>
                 </div>
