--- a/zh-hans/treatment-for-covid-19/index.html
+++ b/zh-hans/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>治疗</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年1月11日, 下午10:30</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月18日, 下午5:05</p>
           
         </div>
       </div>
@@ -197,7 +197,7 @@
 
 
 
-<p>针对重症高危人士，FDA为两种单克隆抗体发布了EUA。其分别为<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a>和<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab加imdevimab</a>。这些抗体会附着于病毒某些部分，帮助免疫系统识别并对抗病毒。如果要使用，则应尽快施用，或在自症状出现之日起10日内施用。</p>
+<p>针对重症高危人士，FDA为一些单克隆抗体疗法发布了EUA。其中包括<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">bamlanivimab</a>，<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">bamlanivimab和etesevimab一起施打</a>，以及<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">casirivimab + imdevimab</a>。这些抗体会附着于病毒某些部分，帮助免疫系统识别并对抗病毒。如果要使用，则应尽快施用，或在自症状出现之日起10日内施用。</p>
 
 
 
@@ -344,8 +344,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>有。FDA为单克隆抗体药物发布了两项EUA：</p>
-<ul><li>Bamlanivimab</li><li>Casirivimab和imdevimab，一起给药</li></ul>
+            <p>是的。FDA为单克隆抗体药物发布了数项EUA：</p>
+<ul><li>Bamlanivimab</li><li>Bamlanivimab和etesevimab，一起施打</li><li>Casirivimab和imdevimab，一起施打</li></ul>
 <p>授权将药物用于以下人士：</p>
 <ul><li>有轻度或中度COVID-19症状的非住院患者。</li><li>体重至少达88磅的12岁及以上成人及儿童患者。 </li><li>有较高风险发展为COVID-19重症或住院的患者。其中包括65岁或以上人士，或有特定慢性病况的人士。</li></ul>
 <p>这些药物的施用方式是由医疗保健提供者进行单剂量静脉给药。</p>
@@ -353,8 +353,8 @@
 <ul><li>住院治疗</li><li>氧气治疗</li><li>因有潜在的非COVID-19相关状况而需要增加基础氧气流量</li></ul>
 <p>使用这些药物进行治疗的患者应该持续进行以下事项：</p>
 <ul><li>自我隔离</li><li>佩戴口罩 </li><li>保持社交距离 </li><li>避免共用个人物品 </li><li>对“经常接触”的表面进行清洁和消毒 </li><li>勤洗手</li></ul>
-<p>如需更多信息，请参阅</p>
-<ul><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用于治疗COVID-19的单克隆抗体Bamlanivimab</a></li><li>FDA：<a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">用于治疗COVID-19的单克隆抗体Casirivimab和Imdevimab</a></li><li>FDA：<a href="https://www.fda.gov/media/143605/download">有关Bamlanivimab紧急使用授权的常见问题与解答</a> </li><li>FDA：<a href="https://www.fda.gov/media/143894/download">有关Casirivimab + Imdevimab紧急使用授权的常见问题与解答</a></li></ul>
+<p>从FDA了解更多关于这些疗法的信息：</p>
+<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">用于治疗COVID-19的单克隆抗体Bamlanivimab</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">用于治疗COVID-19的单克隆抗体Bamlanivimab和Etesevimab</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">用于治疗COVID-19的单克隆抗体Casirivimab和Imdevimab</a></li><li><a href="https://www.fda.gov/media/143605/download">有关Bamlanivimab紧急使用授权的常见问题与解答</a> </li><li><a href="https://www.fda.gov/media/145808/download">有关Bamlanivimab和Etesevimab紧急使用授权的常见问题与解答</a></li><li><a href="https://www.fda.gov/media/143894/download">有关Casirivimab + Imdevimab紧急使用授权的常见问题与解答</a></li></ul>
 
                   </div>
                 </div>
