--- a/zh-hant/housing-and-homelessness/index.html
+++ b/zh-hant/housing-and-homelessness/index.html
@@ -294,7 +294,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>可能會為您和您的家人提供一間汽車旅館房間或酒店房間。請聯絡當地無家可歸者</a>持續性護理機構<a href="https://www.bcsh.ca.gov/hcfc/documents/coc_poc.pdf">，以讓您獲得此服務。</p>
+            <p>可能會為您和您的家人提供一間汽車旅館房間或酒店房間。請聯絡當地無家可歸者</a>持續性護理機構<a href="https://www.bcsh.ca.gov/hcfc/documents/coc_poc.pdf">，以讓您獲得此服務。</a></p>
 
                   </div>
                 </div>
