Update page - get-tested.html 30af98abe67ed51379eb4a5d2e64c4a6e9a803c0

--- a/get-tested/index.html
+++ b/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Testing</h1>
           
-            <p class="small-text">Last updated&nbsp;February 4, 2021 at 10:53 AM</p>
+            <p class="small-text">Last updated&nbsp;February 22, 2021 at 3:15 PM</p>
           
         </div>
       </div>
@@ -299,7 +299,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Yes. The U.S. Food and Drug Administration (FDA) issued an <a href="https://www.fda.gov/media/144457/download" aria-label="Emergency Use Authorization to Ellume">Emergency Use Authorization (EUA)</a> for an over-the-counter fully at-home diagnostic test for COVID-19. The test is authorized for individuals two years of age or older, including those not showing symptoms.</p>
+            <p>Yes. The U.S. Food and Drug Administration (FDA) issued an <a aria-label="Emergency Use Authorization to Ellume" href="https://www.fda.gov/media/144457/download">Emergency Use Authorization</a> (EUA) for an over-the-counter fully at-home diagnostic test for COVID-19. The test is authorized for individuals two years of age or older, including those not showing symptoms.</p>
 <p>The home test is a rapid, lateral flow antigen test, a type of test that runs a liquid sample along a surface with reactive molecules. The FDA allows it to be sold in places like drug stores, where a patient can buy it, swab their nose, run the test and find out their results in as little as 20 minutes.&nbsp;</p>
 <p>Individuals with positive results should:</p>
 <ul><li>Self-isolate</li><li>Seek additional care from their health care provider</li></ul>
@@ -352,7 +352,7 @@
 <p>Individuals with positive results should:</p>
 <ul><li>Self-isolate</li><li>Seek additional care from their health care provider</li></ul>
 <p>Individuals who test negative and experience COVID-like symptoms should follow up with their health care provider.&nbsp;It is possible to get a negative test result and still be infected with&nbsp;coronavirus.</p>
-<p>For more information, see the <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">FDA news release</a>.</p>
+<p>For more information, see the FDA <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">news release</a>.</p>
 
                   </div>
                 </div>
