Update page - holidays.html f39917218da86cd56ada3355b8e88e6573777c8b

--- a/holidays/index.html
+++ b/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Holidays and COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;February 17, 2021 at 2:55 PM</p>
+            <p class="small-text">Last updated&nbsp;February 22, 2021 at 4:57 PM</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#the-covid-chat">Having &#8220;The COVID chat&#8221;</a></strong></li><li><strong><a href="#restrictions">Check restrictions in your area</a></strong></li><li><strong><a href="#travel-advisory">Travel advisory</a></strong></li><li><strong><a href="#holiday-tips">Tips for healthier holidays</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">Having &#8220;The COVID chat&#8221;</a></strong></li><li><strong><a href="#restrictions">Check restrictions in your area</a></strong></li><li><strong><a title="See the Travel advisory section" href="#travel-advisory">Travel advisory</a></strong></li><li><strong><a href="#holiday-tips">Tips for healthier holidays</a></strong></li></ul>
 
 
 
@@ -217,7 +217,7 @@
 
 
 
-<p>For complete details and requirements, read CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Travel Advisory</a> and <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 Quarantine Guidance</a>.</p>
+<p>For complete details and requirements, read CDPH’s <a title="Read the Travel Advisory" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Travel Advisory</a> and <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 Quarantine Guidance</a>.</p>
 
 
 
