Update page - safer-economy.html 118ac87b064ad3f0d18d02fb93ef33418ac9f516

--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;February 22, 2021 at 6:11 PM</p>
+            <p class="small-text">Last updated&nbsp;February 22, 2021 at 6:38 PM</p>
           
         </div>
       </div>
@@ -336,8 +336,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>K-12th grade schools can reopen for in-person instruction once their county has been in the Substantial (red) tier for at least 5 consecutive days and have posted their COVID-19 Safety Plan (CSP) to their website homepage. The first day a county is considered in the Substantial (red) tier is the Wednesday after the weekly county tier assignments are announced and posted on the CDPH website (on Tuesdays). For example, if a county is assigned to the Substantial (red) tier on Tuesday, March 9, the first full day the county is in the Substantial (red) tier is Wednesday, March 10.&nbsp;Schools that have reopened for in-person instruction are not required to close if their county moves back to the Widespread (purple) tier. </p>
-<p>Learn more about <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guidance for schools</a>.</p>
+            <p>K-12th grade schools can reopen for in-person instruction in accordance with the <a href="https://schools.covid19.ca.gov/">K-12 School Guidance</a>. K-6th grade schools may open once their county has a case rate of less than 25 cases per 100,00 (adjusted) and if schools have followed the other processes for school re-opening outlined in the guidance. Middle and High Schools can open once the county is in the Substantial (red) tier and have also followed the school re-opening guidance. The first day schools are eligible for re-opening under either criterion is the day after the county meets the relevant metric (case rate of less than 25, or being in the Substantial (red) tier) of the Blueprint for a Safer Economy (published weekly on Tuesdays, so schools are eligible to re-open on Wednesday). Schools in counties that have met the relevant criteria for school re-opening per the K-12 Guidance have a three-week period to open, starting the day the county meets the criterion for re-opening, even if the county stops meeting the criterion during that window (i.e., case rate is ≥25 in a subsequent calculation or the county assignment goes back to the Widespread (purple) tier during the window). The goal of the three-week window is to facilitate calm and safe school re-openings.</p>
+<p>Learn more about <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guidance for schools<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
 
                   </div>
                 </div>
