--- a/es/data-and-tools/index.html
+++ b/es/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Datos y herramientas</h1>
           
-            <p class="small-text">Última actualización&nbsp;22 de febrero de 2021 a las 6:51 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;23 de febrero de 2021 a las 7:24 a. m.</p>
           
         </div>
       </div>
