--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;February 22, 2021 at 6:51 PM</p>
+            <p class="small-text">最近更新&nbsp;February 23, 2021 at 7:25 AM</p>
           
         </div>
       </div>
