--- a/ar/food-resources/index.html
+++ b/ar/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الطعام والمساعدات الغذائية</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;8:18 م الساعة 16 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;11:59 ص الساعة 22 فبراير 2021</p>
           
         </div>
       </div>
@@ -241,7 +241,7 @@
 
 
 
-<p class="js-qa-answer">ويمكن لتطبيق (The CA Meals for Kids) مساعدة الطلاب والعائلات على العثور على الوجبات أثناء الإغلاق الطارئ بسبب كوفيد-19. التطبيق مجاني ويمكن تحميله من <a href="https://apps.apple.com/us/app/ca-meals-for-kids/id1327449394" aria-label="California meals for kids in Apple's App Store" title="افتح متجر تطبيقات Apple"> App Store من </a>Apple، و <a href="https://play.google.com/store/apps/details?id=gov.ca.cde.NSDMobileApp" aria-label="California meals for kids in Google's Play Store" title="افتح متجر تطبيقات Google">متجر Play Store من </a>Google، ومتجر App Store من <a href="https://www.microsoft.com/en-us/p/ca-meals-for-kids/9p7t6j276zz9" aria-label="California meals for kids in Microsoft's App Store">Microsoft</a>.</p>
+<p class="js-qa-answer">ويمكن لتطبيق (The CA Meals for Kids) مساعدة الطلاب والعائلات على العثور على الوجبات أثناء الإغلاق الطارئ بسبب كوفيد-19. التطبيق مجاني ويمكن تحميله من <a href="https://apps.apple.com/us/app/ca-meals-for-kids/id1327449394" title="وجبات كاليفورنيا للأطفال على متجر تطبيقات Apple"> App Store من </a>Apple، و <a href="https://play.google.com/store/apps/details?id=gov.ca.cde.NSDMobileApp" title="وجبات كاليفورنيا للأطفال على متجر تطبيقات Google">متجر Play Store من </a>Google، ومتجر App Store من <a href="https://www.microsoft.com/en-us/p/ca-meals-for-kids/9p7t6j276zz9" title="وجبات كاليفورنيا للأطفال على متجر تطبيقات Microsoft">Microsoft</a>.</p>
 
 
 
@@ -317,7 +317,7 @@
 
 
 
-<p>خط كاليفورنيا الساخن للاستفسار عن كوفيد-19: <strong>‎833-422-4255</strong><a href="tel:[833-422-4255]"> (833-4CA-4ALL)</a></p>
+<p><strong>خط كاليفورنيا الساخن للاستفسار عن كوفيد-19: ‎833-422-4255</strong><a href="tel:[833-422-4255]"> (833-4CA-4ALL)</a></p>
 
 
 
@@ -409,7 +409,7 @@
 
 
 
-<p>يمكنك استخدام TaskRabbit للعثور على المساعدة الفورية لإتمام مهامك اليومية، بما فيها الطعام وخدمة التوصيل من الصيدليات. يتوفر خصم 5% لكبار السن. تفضل بزيارة موقع <a href="https://www.taskrabbit.com/">TaskRabbit</a> أو قم بتنزيل التطبيق المجاني لهاتفك الذكي من <a href="https://apps.apple.com/app/id374165361" aria-label="Taskrabbit in Apple's App Store">App Store من Apple</a>  أومتجر <a href="https://play.google.com/store/apps/details?id=com.taskrabbit.droid.consumer" aria-label="Taskrabbit in Google's Play Store">Play Store من Google</a>. </p>
+<p>يمكنك استخدام TaskRabbit للعثور على المساعدة الفورية لإتمام مهامك اليومية، بما فيها الطعام وخدمة التوصيل من الصيدليات. يتوفر خصم 5% لكبار السن. تفضل بزيارة موقع <a href="https://www.taskrabbit.com/">TaskRabbit</a> أو قم بتنزيل التطبيق المجاني لهاتفك الذكي من <a href="https://apps.apple.com/app/id374165361" title="Taskrabbit موجود على متجر تطبيقات Apple">App Store من Apple</a> أو متجر<a href="https://play.google.com/store/apps/details?id=com.taskrabbit.droid.consumer" title="Taskrabbit موجود على متجر تطبيقات Google">Play Store من Google</a>.</p>
 
 
 
