--- a/zh-hans/food-resources/index.html
+++ b/zh-hans/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>食品及食物援助</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月16日, 下午8:18</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月22日, 上午11:59</p>
           
         </div>
       </div>
@@ -241,7 +241,7 @@
 
 
 
-<p class="js-qa-answer">CAMeals for Kids应用程序可在COVID-19学校紧急关闭期间，帮助学生和家庭取得餐食。该应用程序免费，可于<a href="https://apps.apple.com/us/app/ca-meals-for-kids/id1327449394" aria-label="California meals for kids in Apple's App Store" title="打开Apple的App Store">Apple的App Store</a>、<a href="https://play.google.com/store/apps/details?id=gov.ca.cde.NSDMobileApp" aria-label="California meals for kids in Google's Play Store" title="打开Google的Play Store">Google的Play Store</a>，以及<a href="https://www.microsoft.com/en-us/p/ca-meals-for-kids/9p7t6j276zz9" aria-label="California meals for kids in Microsoft's App Store">Microsoft的App Store</a>进行下载。</p>
+<p class="js-qa-answer">CAMeals for Kids应用程序可在COVID-19学校紧急关闭期间，帮助学生和家庭取得餐食。该应用程序免费，可于<a href="https://apps.apple.com/us/app/ca-meals-for-kids/id1327449394" title="在Apple的App Store下载CA Meals for Kids">Apple的App Store</a>、<a href="https://play.google.com/store/apps/details?id=gov.ca.cde.NSDMobileApp" title="在Google的Play Store下载CA Meals for Kids">Google的Play Store</a>，以及<a href="https://www.microsoft.com/en-us/p/ca-meals-for-kids/9p7t6j276zz9" title="在Microsoft的App Store下载CA Meals for Kids">Microsoft的App Store</a>进行下载。</p>
 
 
 
@@ -409,7 +409,7 @@
 
 
 
-<p>您可以使用TaskRabbit寻求针对日常事务的实时帮助，包括食品和药品配送。为年长者提供5%折扣。访问<a href="https://www.taskrabbit.com/">TaskRabbit</a>网站，或者在<a href="https://apps.apple.com/app/id374165361" aria-label="Taskrabbit in Apple's App Store">Apple的App Store</a>或<a href="https://play.google.com/store/apps/details?id=com.taskrabbit.droid.consumer" aria-label="Taskrabbit in Google's Play Store">Google的Play Store</a>下载免费应用程序到您的智能手机。 </p>
+<p>您可以使用TaskRabbit寻求针对日常事务的实时帮助，包括食品和药品配送。为年长者提供5%折扣。访问<a href="https://www.taskrabbit.com/">TaskRabbit</a>网站，或者在<a href="https://apps.apple.com/app/id374165361" title="在Apple的App Store下载TaskRabbit">Apple的App Store</a>或<a href="https://play.google.com/store/apps/details?id=com.taskrabbit.droid.consumer" title="在Google的Play Store下载TaskRabbit">Google的Play Store</a>下载免费应用程序到您的智能手机。</p>
 
 
 
