Update page - vaccines.html 13c06c01dc9412ea469f1dc28d1e3610e9b5d26e

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 7:20 AM</p>
+            <p class="small-text">Last updated&nbsp;February 23, 2021 at 7:27 AM</p>
           
         </div>
       </div>
@@ -201,6 +201,10 @@
 
 
 <div style="display:none;" class="js-qa js-qa-question">When can the general public, who are not in Phase 1, start getting vaccinated? Where can I sign-up to be notified when it is my turn?</div>
+
+
+
+<div style="display:none;" class="wp-accordion-content"><!-- Register --></div>
 
 
 
@@ -304,6 +308,10 @@
 
 
 <div style="display:none;" class="js-qa js-qa-question">How can I get a COVID-19 vaccine appointment?</div>
+
+
+
+<div style="display:none;" class="wp-accordion-content"><!-- Register --></div>
 
 
 
